--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compound News</title>
+
+    <!------- bootstrap cdm link ------- -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="container">
     <header>
-        <h1>Compound News</h1>
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <h2 class="navbar-brand fs-2"> <span class="bg-primary text-white p-2">Compound</span> News</h2>
+                <form class="d-flex" role="search">
+                    <button class="btn btn-outline-success me-2" type="submit">Home</button>
+                    <button class="btn btn-outline-success me-2" type="submit">Blog</button>
+                    <!-- <img src="images/pic-for-assign.png" class="rounded-circle h-25 w-25" alt=""> -->
+                </form>
+            </div>
+        </nav>
+
     </header>
+
+    <!------ bootstrap script link ---- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
