--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="container">
+    <!------- header and nav part---- -->
     <header>
         <nav class="navbar bg-light">
             <div class="container-fluid">
@@ -24,13 +25,25 @@
                 </form>
             </div>
         </nav>
-
     </header>
+    <!--===== main part start here ============ -->
+    <main>
+        <!---------- manu bar ------- -->
+        <section>
+            <div id="manu-categories" class="d-flex">
+
+            </div>
+
+        </section>
+
+    </main>
 
     <!------ bootstrap script link ---- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <!-- javascript link  -->
+    <script src="js/apps.js"></script>
 </body>
 
 </html>
