--- a/index.html
+++ b/index.html
@@ -26,15 +26,33 @@
             </div>
         </nav>
     </header>
+    <hr>
     <!--===== main part start here ============ -->
-    <main>
-        <!---------- manu bar ------- -->
+    <main class="container">
+        <!----------all manu bar start here ------- -->
         <section>
             <div id="manu-categories" class="d-flex">
+            </div>
+        </section>
+        <!----------all manu bar end here ------- -->
+
+        <!-------------- start items counts  --------->
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">00</span>
+            <input type="text" class="form-control" placeholder=" items found for category Entertainment"
+                aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+        <!-- All news in a category  -->
+        <section>
+
+            <div id="news-category-field" class="mb-3 " style="width: 100%;">
 
             </div>
 
         </section>
+
+
+
 
     </main>
 
@@ -44,6 +62,7 @@
         crossorigin="anonymous"></script>
     <!-- javascript link  -->
     <script src="js/apps.js"></script>
+    <script src="js/card.js"></script>
 </body>
 
 </html>
