--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compound News</title>
 
+    <style>
+        .sizing {
+            height: 25%;
+            width: 25%;
+        }
+    </style>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/ba5a3eb11a.js" crossorigin="anonymous"></script>
+
     <!------- bootstrap cdm link ------- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
