show counting length

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <nav class="navbar bg-light">
             <div class="container-fluid">
-                <h2 class="navbar-brand fs-2"> <span class="bg-primary text-white p-2">Compound</span> News</h2>
+                <h2 class="navbar-brand fs-2 "> <span class="text-primary fw-bold  p-2">Compound</span> News</h2>
                 <form class="d-flex" role="search">
                     <button class="btn btn-outline-success me-2" type="submit">Home</button>
                     <button class="btn btn-outline-success me-2" type="submit">Blog</button>
@@ -52,7 +52,7 @@
 
         <!-------------- start items counts  --------->
         <div class="input-group mb-3">
-            <p class="input-group-text w-100" id="basic-addon1"> <span> 00 </span> :Items found for category
+            <p class="input-group-text fs-5 w-100 " id="counts-category"> <span> 00 </span> :Items found for category
                 Entertainment
             </p>
         </div>
@@ -60,10 +60,10 @@
         <!-- short veiw  -->
 
         <div class="hstack gap-3">
-            <div class="bg-light ">Sort By View:</div>
-            <div class="bg-light border pe-10px">Default </div>
-            <div class="bg-light border ms-auto">Second item</div>
-            <div class="bg-light border">Third item</div>
+            <div class="bg-light fs-5">Sort By View:</div>
+            <div class="bg-light fs-4 border pe-10px">Default <i class="fa-solid fa-arrow-down"></i></div>
+            <div class="bg-primary fs-4 text-white  border ms-auto">Today’s Pick</div>
+            <div class="bg-light border fs-4">Trending</div>
         </div>
 
         <!-- All news in a category  -->
