--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <!----------all manu bar end here ------- -->
 
-        <!-------------- start items counts  --------->
+        <!-------------- start items counts show --------->
         <div class="input-group mb-3">
             <p class="input-group-text fs-5 w-100 " id="counts-category"> <span> 00 </span> :Items found for category
                 Entertainment
@@ -74,6 +74,15 @@
             </div>
 
         </section>
+        <!-------------- spinner -------- -->
+        <section id="loader" class="d-none">
+            <div style="height: 300px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+
 
         <!--------------- Modal  ----------->
         <section>
