--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <h2 class="navbar-brand fs-2 "> <span class="text-primary fw-bold  p-2">Compound</span> News</h2>
                 <form class="d-flex" role="search">
                     <button class="btn btn-outline-success me-2" type="submit">Home</button>
-                    <button class="btn btn-outline-success me-2" type="submit">Blog</button>
+                    <button onclick="document.location='http://127.0.0.1:5500/card.html'"
+                        class="btn btn-outline-success me-2" type="submit">Blog</button>
                     <!-- <img src="images/pic-for-assign.png" class="rounded-circle h-25 w-25" alt=""> -->
                 </form>
             </div>
@@ -114,6 +115,11 @@
         crossorigin="anonymous"></script>
     <!-- javascript link  -->
     <script src="js/apps.js"></script>
+
+    <!-- footer  -->
+    <footer class=" bg-secondary h-25 p-2 mb-3 mt-3 rounded">
+        <p class="text-center text-white fs-2 fw-bold">Copyright 2022 Compound News</p>
+    </footer>
 </body>
 
 </html>
