--- a/card.html
+++ b/card.html
@@ -5,14 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>question</title>
+    <title>Compound News</title>
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/ba5a3eb11a.js" crossorigin="anonymous"></script>
+
+    <!------- bootstrap cdm link ------- -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="container">
+    <!------- header and nav part---- -->
     <header>
-        <h1></h1>
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <h2 class="navbar-brand fs-2 "> <span class="text-primary fw-bold  p-2">Compound</span> News</h2>
+                <form class="d-flex" role="search">
+                    <button class="btn btn-outline-success me-2" type="submit">Home</button>
+                    <button class="btn btn-outline-success me-2" type="submit">Blog</button>
+                    <!-- <img src="images/pic-for-assign.png" class="rounded-circle h-25 w-25" alt=""> -->
+                </form>
+            </div>
+        </nav>
     </header>
-    <main>
+    <hr>
+    <!--===== main part start here ============ -->
+    <main class="container">
 
         <section>
             <!-- Difference between var, let and const keywords -->
@@ -59,11 +78,17 @@
                 functions are only callable and not constructible, i.e arrow functions can never be used as constructor
                 functions.</div>
         </section>
-
     </main>
 
+    <!------ bootstrap script link ---- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 
-
+    <!-- footer  -->
+    <footer class=" bg-secondary h-25 p-2 mb-3 mt-3 rounded">
+        <p class="text-center text-white fs-2 fw-bold">Copyright 2022 Compound News</p>
+    </footer>
 </body>
 
 </html>
