counting other file

--- a/card.html
+++ b/card.html
@@ -22,7 +22,8 @@
             <div class="container-fluid">
                 <h2 class="navbar-brand fs-2 "> <span class="text-primary fw-bold  p-2">Compound</span> News</h2>
                 <form class="d-flex" role="search">
-                    <button class="btn btn-outline-success me-2" type="submit">Home</button>
+                    <button class="btn btn-outline-success me-2" type="submit"><a
+                            class="text-decoration-none text-success" href="index.html">Home</a></button>
                     <button class="btn btn-outline-success me-2" type="submit">Blog</button>
                     <!-- <img src="images/pic-for-assign.png" class="rounded-circle h-25 w-25" alt=""> -->
                 </form>
