--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <hr>
 
     <!--===== main part start here ============ -->
-    <main class="container">
+    <main>
         <!----------all manu bar start here ------- -->
         <section>
-            <div id="manu-categories" class="d-flex">
+            <div class="container" id="manu-categories" class="d-flex">
             </div>
         </section>
         <!----------all manu bar end here ------- -->
